More Minor(?) Changes - Updated pack.mcmetadata to version 71. We're going to have to do this anyway. Doesn't seen to break things more. - I suspect something in here is breaking recipe unlocking. Not sure what, though.